--- a/_config.yml
+++ b/_config.yml
@@ -2,27 +2,23 @@
 title: MYAndroid Study
 header-img: "img/bg_starbuck2.jpg"
 tagline: "MYAndroid"
-description: "在遙遠的地方 一切虔誠終必相遇"
+description: "宁静致远"
 baseurl: ""
-url: "http://maoyanxuexi.github.io"
+url: "https://skylixinxin.github.io/"
 #url: "http://localhost:4000"
 
 # About/contact
 owner:
   name: "MYAndroid Study"
-  email: maoyanxuexi@gmail.com
-  bio: "明朝即長路 惜取此時心"
+  email: xinnianwei@qq.com
+  bio: "漫漫人生路,乐一时是一时"
 
 # Data
 gavatar: http://oacl4nhb6.bkt.clouddn.com/icon_maoyan.jpg
 favicon: img/favicon.ico
 
-douban_username: maoyan
-twitter_username: maoyan
-github_username: maoyanxuexi
-facebook_username: maoyan
-weibo_username: maoyan
-zhihu_username: maoyan
+github_username: skylixinxin
+weibo_username: "淡品清茶"
 
 # Build settings  
 # use Github Flavored Markdown !important  
