删除fork的博文

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ url: "https://skylixinxin.github.io/"
 
 # About/contact
 owner:
-  name: "MYAndroid Study"
+  name: "LiXinxin"
   email: xinnianwei@qq.com
   bio: "漫漫人生路,乐一时是一时"
 
